# bepo

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
bepo/: __init__.py  cli.py  fingerprint.py  idf_buckets.py
tests/: test_fingerprint.py
