[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bepo"
version = "0.8.0"
description = "Detect duplicate PRs in GitHub repos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Andrew Park" }]
keywords = ["github", "pull-request", "duplicate", "detection", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
bepo = "bepo.cli:main"

[project.urls]
Homepage = "https://github.com/aardpark/bepo"
Repository = "https://github.com/aardpark/bepo"
